--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 	<LinearLayout android:id="@+id/mainLinearLayout"
-	    android:orientation="vertical"    
+	    android:orientation="horizontal"    
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content">
+	    android:layout_height="fill_parent">
 	    <fragment
-	        android:name="com.jphilli85.deviceinfo2.ButtonFragment"
-	        android:layout_width="fill_parent"
-	        android:layout_height="48dp"
-	        android:id="@+id/button_fragment" />	    
+	        class="com.jphilli85.deviceinfo2.GroupListFragment"
+	        android:id="@+id/grouplist_fragment"
+	        android:layout_width="0dp"
+	        android:layout_height="fill_parent"
+	        android:layout_weight="35" />	    
 	    <fragment
-	        android:name="com.jphilli85.deviceinfo2.ViewerFragment"
-	        android:layout_width="match_parent"
-	        android:layout_height="0dp"
-	        android:id="@+id/viewer_fragment"
-	        android:layout_weight="1" />	    
+	        class="com.jphilli85.deviceinfo2.DetailsFragment"
+	        android:id="@+id/viewer_fragment"	        
+	        android:layout_width="0dp"
+	        android:layout_height="fill_parent"
+	        android:layout_weight="65" />	    
     </LinearLayout>
-</ScrollView>	
+</merge>	
