--- a/res/layout/group_listitem.xml
+++ b/res/layout/group_listitem.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
     <ImageView 
-        android:id="@+id/item_icon"
+        android:id="@+id/itemIcon"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:padding="4dp"
         android:src="@drawable/icon" />
     <TextView
-        android:id="@+id/item_label"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"  
+        android:id="@+id/itemLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"  
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:padding="4dp"
         android:gravity="center_vertical" 
