--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mainLinearLayout"    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
     android:orientation="horizontal"    
     android:layout_width="match_parent"
     android:layout_height="match_parent">    
@@ -9,11 +8,18 @@
         android:id="@+id/groupListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="40" />	    
-    <fragment
-        android:name="com.jphilli85.deviceinfo.DetailsFragment"
-        android:id="@+id/detailsFragment"	        
+        android:layout_weight="40" />	
+    <FrameLayout 
+        android:id="@+id/detailsFragmentWrapper"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="60" />	    
+    	android:layout_height="match_parent"
+    	android:layout_weight="60">
+<!--     	android:background="?android:attr/detailsElementBackground">         -->
+<!-- 	    <fragment -->
+<!-- 	        android:name="com.jphilli85.deviceinfo.DetailsFragment" -->
+<!-- 	        android:id="@+id/detailsFragment"	         -->
+<!-- 	        android:layout_width="0dp" -->
+<!-- 	        android:layout_height="match_parent" -->
+<!-- 	        android:layout_weight="60" /> -->
+    </FrameLayout>	    
 </LinearLayout>
