--- a/res/layout/details.xml
+++ b/res/layout/details.xml
@@ -8,6 +8,5 @@
 	    android:id="@+id/detailsLayout"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:orientation="vertical" >
-	</LinearLayout>
+	    android:orientation="vertical" />
 </ScrollView>
