--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"       
-    android:orientation="horizontal"    
+<merge xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
     android:layout_height="match_parent">    
     <fragment
@@ -8,4 +7,4 @@
         android:id="@+id/groupListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+</merge>
