--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">    
     <fragment
-        android:name="com.jphilli85.deviceinfo.GroupListFragment"
+        android:name="com.jphilli85.deviceinfo.app.GroupListFragment"
         android:id="@+id/groupListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
