--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">    
     <fragment
-        android:name="com.jphilli85.deviceinfo.GroupListFragment"
+        android:name="com.jphilli85.deviceinfo.app.GroupListFragment"
         android:id="@+id/groupListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
