--- a/res/layout/group_listitem.xml
+++ b/res/layout/group_listitem.xml
@@ -15,6 +15,5 @@
         android:layout_height="wrap_content"  
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:padding="4dp"
-        android:gravity="center_vertical" 
-        android:text="Label" />
+        android:gravity="center_vertical" />
 </LinearLayout>
