--- a/res/layout/group_listitem.xml
+++ b/res/layout/group_listitem.xml
@@ -8,6 +8,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:padding="4dp"
+        android:contentDescription="Icon"
         android:src="@drawable/icon" />
     <TextView
         android:id="@+id/itemLabel"
