--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,12 +8,39 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    <style name="UnitTextView">
+    
+    <style name="SensorsTitleTextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
     </style>
-    <style name="DetailsTextView">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="SensorsCategoryTextView">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:paddingTop">8dp</item>
+    </style>
+    <style name="SensorTypeTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">8dp</item>
+    </style>
+    <style name="SensorLabelTextView">
+        <item name="android:layout_width">125dp</item>
+        <item name="android:layout_height">wrap_content</item>
+<!--         <item name="android:textStyle">bold</item> -->
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textSize">@dimen/textSizeMicro</item>        
+    </style>
+    <style name="SensorValueTextView">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">wrap_content</item>    
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>  
+        <item name="android:textSize">@dimen/textSizeMicro</item>
     </style>
 </resources>
