--- a/res/layout/sensor_views_wrapper.xml
+++ b/res/layout/sensor_views_wrapper.xml
@@ -4,31 +4,48 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-    <TextView 
-        android:id="@+id/sensorsTitleTextView"
-        style="@style/SensorsTitleTextView" />
-    <TextView 
-        android:id="@+id/categoryMotionTextView"
-        style="@style/SensorsCategoryTextView" />
     <LinearLayout 
-        android:id="@+id/categoryMotionWrapper"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical" />
-    <TextView 
-        android:id="@+id/categoryPositionTextView"
-        style="@style/SensorsCategoryTextView" />
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:orientation="horizontal">     
+        <ImageView 
+	   	    android:id="@+id/masterExpandCollapseImageView"
+	   	    style="@style/SensorExpandCollapseImageView"/>
+        <TextView 
+	        android:id="@+id/sensorsTitleTextView"
+	        style="@style/SensorsTitleTextView" />
+	    <ImageView 
+	   	    android:id="@+id/masterPlayPauseImageView"
+	   	    style="@style/SensorPlayPauseImageView"/>
+    </LinearLayout>
     <LinearLayout 
-        android:id="@+id/categoryPositionWrapper"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical" />
-    <TextView 
-        android:id="@+id/categoryEnvironmentTextView"
-        style="@style/SensorsCategoryTextView" />
-    <LinearLayout 
-        android:id="@+id/categoryEnvironmentWrapper"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical" />
+        android:id="@+id/sensorViewsContent"
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:orientation="vertical">
+	    <TextView 
+	        android:id="@+id/categoryMotionTextView"
+	        style="@style/SensorsCategoryTextView" />
+	    <LinearLayout 
+	        android:id="@+id/categoryMotionWrapper"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical" />
+	    <TextView 
+	        android:id="@+id/categoryPositionTextView"
+	        style="@style/SensorsCategoryTextView" />
+	    <LinearLayout 
+	        android:id="@+id/categoryPositionWrapper"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical" />
+	    <TextView 
+	        android:id="@+id/categoryEnvironmentTextView"
+	        style="@style/SensorsCategoryTextView" />
+	    <LinearLayout 
+	        android:id="@+id/categoryEnvironmentWrapper"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical" />
+    </LinearLayout>
 </LinearLayout>
