--- a/res/values/unit_labels.xml
+++ b/res/values/unit_labels.xml
@@ -21,4 +21,30 @@
     <string name="unit_decibel_milli_watt">dBm</string>
     <string name="unit_watt">W</string>
     <string name="unit_mega_bits_per_second">Mbps</string>
+    
+    <string name="unit_week">w</string>
+    <string name="unit_day">d</string>
+    <string name="unit_hour">h</string>
+    <string name="unit_minute">m</string>
+    <string name="unit_second">s</string>
+    <plurals name="unit_week">
+        <item quantity="one">week</item>
+        <item quantity="other">weeks</item>
+    </plurals>
+    <plurals name="unit_day">
+        <item quantity="one">day</item>
+        <item quantity="other">days</item>
+    </plurals>
+    <plurals name="unit_hour">
+        <item quantity="one">hour</item>
+        <item quantity="other">hours</item>
+    </plurals>
+    <plurals name="unit_minute">
+        <item quantity="one">minute</item>
+        <item quantity="other">minutes</item>
+    </plurals>
+    <plurals name="unit_second">
+        <item quantity="one">second</item>
+        <item quantity="other">seconds</item>
+    </plurals>
 </resources>
