--- a/res/layout/element_list_item.xml
+++ b/res/layout/element_list_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/elementListItemLabel" />
+    android:id="@+id/label"
+    style="@style/ElementListItem.Label" />
 <TextView 
-    android:id="@+id/elementListItemValue" />    
+    android:id="@+id/value" 
+    style="@style/ElementListItem.Value" /> 
