--- a/res/layout/group_listitem.xml
+++ b/res/layout/group_listitem.xml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    style="@style/Match">
     <ImageView 
-        android:id="@+id/itemIcon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="4dp"
-        android:contentDescription="Icon"
-        android:src="@drawable/icon" />
+        android:id="@+id/icon"
+        style="@style/GroupIcon"
+        android:contentDescription="@string/content_desc_icon" />
     <TextView
-        android:id="@+id/itemLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"  
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:padding="4dp"
-        android:gravity="center_vertical" />
+        android:id="@+id/label"
+        style="@style/GroupLabel" />
 </LinearLayout>
