--- a/res/layout/details.xml
+++ b/res/layout/details.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/detailsScrollView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fillViewport="true">
-	<LinearLayout 
-	    android:id="@+id/detailsLayout"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical" />
+    style="@style/Scroller">
+   	<LinearLayout 
+	    android:id="@+id/mainLayout"
+	    style="@style/DetailsWrapper" />
 </ScrollView>
