--- a/res/layout/details_fragment.xml
+++ b/res/layout/details_fragment.xml
@@ -2,5 +2,4 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="com.jphilli85.deviceinfo.app.DetailsFragment"
     android:id="@+id/detailsFragment"	        
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    style="@style/Match" />
