--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">    
+<merge xmlns:android="http://schemas.android.com/apk/res/android">    
     <fragment
         android:name="com.jphilli85.deviceinfo.app.GroupListFragment"
         android:id="@+id/groupListFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        style="@style/Match" />
 </merge>
