--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,56 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="GroupImageView">
+    <style name="Wrap">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    <style name="GroupTextView">
+    <style name="Match">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+    <style name="Tall">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+    <style name="Wide">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+  
     
-    <style name="SensorsTitleTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="LeftPane">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">40</item>        
+    </style>
+    <style name="RightPane">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">60</item>        
+    </style>
+    
+    
+    <style name="Scroller" parent="@style/Match">
+        <item name="android:orientation">vertical</item>
+        <item name="android:fillViewport">true</item>
+    </style>
+    <style name="DetailsWrapper" parent="@style/Wide">
+        <item name="android:orientation">vertical</item>
+    </style>
+    
+
+    
+    <style name="GroupIcon">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:src">"@drawable/icon</item>
+        
+    </style>
+    <style name="GroupLabel" parent="@style/Wide">
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:padding">8dp</item>
+        <item name="android:padding">4dp</item>
         <item name="android:gravity">center_vertical</item>
     </style>
-    <style name="SensorsCategoryTextView">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:paddingTop">8dp</item>
-    </style>
-    <style name="SensorTypeTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:paddingTop">8dp</item>
-    </style>
-    <style name="SensorLabelTextView">
-        <item name="android:layout_width">125dp</item>
-        <item name="android:layout_height">wrap_content</item>
-<!--         <item name="android:textStyle">bold</item> -->
-        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textSize">@dimen/textSizeMicro</item>        
-    </style>
-    <style name="SensorValueTextView">
-        <item name="android:layout_width">200dp</item>
-        <item name="android:layout_height">wrap_content</item>    
-        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>  
-        <item name="android:textSize">@dimen/textSizeMicro</item>
-    </style>
+
     
-    <style name="PlayPauseImageView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:contentDescription">Play/Pause</item>
+    
+    <style name="ExpandCollapse" parent="@style/Wrap">
+        
     </style>
-    <style name="ExpandCollapseImageView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="ExpandCollapse.Small">
+        
+    </style>
+    <style name="PlayPause" parent="@style/Wrap">
+        
+    </style>
+    <style name="PlayPause.Small">
+        
     </style>
 </resources>
