--- a/res/values/dimensions.xml
+++ b/res/values/dimensions.xml
@@ -9,6 +9,8 @@
     <dimen name="padding">4dp</dimen>
     <dimen name="margins">4dp</dimen>
     
+    <dimen name="section_content_indent">8dp</dimen>
+    
     <dimen name="lineHeight">48dp</dimen>    
     <dimen name="iconSize">32dp</dimen>
     <dimen name="buttonHeight">40dp</dimen> 
