--- a/res/values/styles_elements.xml
+++ b/res/values/styles_elements.xml
@@ -2,7 +2,8 @@
 <resources>
     <style name="ElementHeader" parent="@style/Wide">
         <item name="android:layout_height">@dimen/lineHeight</item>
-        <item name="android:padding">@dimen/padding</item>        
+        <item name="android:padding">@dimen/padding</item>
+        <item name="android:paddingLeft">0dp</item>        
         <item name="android:layout_gravity">center_vertical</item>
     </style>
     <style name="ElementHeaderLabel" parent="@style/Wrap">
@@ -17,7 +18,8 @@
     </style>
     <style name="ElementSectionLabel" parent="@style/Wrap">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:padding">@dimen/padding</item>   
+        <item name="android:padding">@dimen/padding</item>
+        <item name="android:layout_weight">1.0</item>   
     </style>
     <style name="ElementSubSection" parent="@style/Wide">
         <item name="android:layout_height">@dimen/lineHeightMicro</item>
@@ -27,14 +29,15 @@
     <style name="ElementSubSectionLabel" parent="@style/Wrap">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:padding">@dimen/padding</item> 
+        <item name="android:layout_weight">1.0</item>
     </style>
 	<!--  Styles common to both the label and value in the list format -->
     <style name="ElementListItem" parent="@style/Wide">
-        
+        <item name="android:paddingLeft">@dimen/section_content_indent</item>        
     </style>
     <style name="ElementListItem.Label">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:padding">@dimen/padding</item>
+        <item name="android:padding">@dimen/padding</item>        
     </style>
     <style name="ElementListItem.Value">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
@@ -50,22 +53,24 @@
         <item name="android:padding">@dimen/padding</item>
     </style>
     <style name="ElementTable" parent="@style/Wide">
-        <item name="android:stretchColumns">1</item>
+        <item name="android:paddingLeft">@dimen/section_content_indent</item>
     </style>
 	<!-- The table row; essentially the background for the items -->
     <style name="ElementTableRow">
-        
+       
     </style>
     <!--  Styles common to both the label and value in the table format -->
-    <style name="ElementTableItem">
+    <style name="ElementTableItem" parent="@style/Wrap"> 
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textSize">@dimen/textSizeMicro</item>
+        <item name="android:textSize">@dimen/textSizeMicro</item>  
+        <item name="android:background">@drawable/element_table_row_border</item>                         
     </style>
     <style name="ElementTableItem.Label">
         <item name="android:paddingRight">@dimen/padding</item>
     </style>
     <style name="ElementTableItem.Value">
-        <item name="android:paddingLeft">@dimen/padding</item>
+        <item name="android:paddingLeft">@dimen/padding</item>    
+         <item name="android:layout_weight">1</item>
     </style>  
     
     <style name="ElementCollapsibleContent" parent="@style/Wide">
